# uncropped

./: .gitignore  .travis.yml  LICENSE  README.MD  main.py  pyproject.toml
entrypoints/: cli.py
test_img/: descarga (3).jfif
tests/: test_cli_entrypoint.py
utils/: img_io.py
